# compressor

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  Doxyfile  Makefile  README.md  compress_benchmark.cpp  compress_comprehensive_benchmark.cpp  compression_benchmark_results.md  fast_build.sh
.github/workflows/: build-test.yml
app/: CMakeLists.txt  Makefile  benchmark.cpp  main.cpp
docs/doxygen/html/: BitIO_8hpp.html  BitIO_8hpp.js  BitIO_8hpp_source.html  ByteTypeAdapter_8hpp.html  ByteTypeAdapter_8hpp.js  ByteTypeAdapter_8hpp_source.html  Crc32_8hpp.html  Crc32_8hpp.js  Crc32_8hpp_source.html  DeflateCompressor_8cpp.html  DeflateCompressor_8cpp.js  DeflateCompressor_8cpp_8o_8d.html  DeflateCompressor_8hpp.html  DeflateCompressor_8hpp.js  DeflateCompressor_8hpp_source.html  FileFormat_8hpp.html  FileFormat_8hpp.js  FileFormat_8hpp_source.html  HuffmanCoder_8cpp.html  HuffmanCoder_8cpp.js  HuffmanCoder_8hpp.html  HuffmanCoder_8hpp.js  HuffmanCoder_8hpp_source.html  HuffmanCompressor_8cpp.html  HuffmanCompressor_8cpp.js  HuffmanCompressor_8cpp_8o_8d.html  HuffmanCompressor_8hpp.html  HuffmanCompressor_8hpp.js  HuffmanCompressor_8hpp_source.html  ICompressor_8hpp.html  ICompressor_8hpp.js  ICompressor_8hpp_source.html  Lz77Compressor_8cpp.html  Lz77Compressor_8cpp.js  Lz77Compressor_8cpp_8o_8d.html  Lz77Compressor_8h.html  Lz77Compressor_8h.js  Lz77Compressor_8h_source.html  Lz77Compressor_8hpp.html  Lz77Compressor_8hpp.js  (+146 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+44 more)
docs/doxygen/latex/: BitIO_8hpp.tex  BitIO_8hpp_source.tex  ByteTypeAdapter_8hpp.tex  ByteTypeAdapter_8hpp_source.tex  Crc32_8hpp.tex  Crc32_8hpp_source.tex  DeflateCompressor_8cpp.tex  DeflateCompressor_8cpp_8o_8d.tex  DeflateCompressor_8hpp.tex  DeflateCompressor_8hpp_source.tex  FileFormat_8hpp.tex  FileFormat_8hpp_source.tex  HuffmanCoder_8cpp.tex  HuffmanCoder_8hpp.tex  HuffmanCoder_8hpp_source.tex  HuffmanCompressor_8cpp.tex  HuffmanCompressor_8cpp_8o_8d.tex  HuffmanCompressor_8hpp.tex  HuffmanCompressor_8hpp_source.tex  ICompressor_8hpp.tex  ICompressor_8hpp_source.tex  Lz77Compressor_8cpp.tex  Lz77Compressor_8cpp_8o_8d.tex  Lz77Compressor_8h.tex  Lz77Compressor_8h_source.tex  Lz77Compressor_8hpp.tex  Lz77Compressor_8hpp_source.tex  NullCompressor_8cpp.tex  NullCompressor_8cpp_8o_8d.tex  NullCompressor_8hpp.tex  NullCompressor_8hpp_source.tex  RleCompressor_8cpp.tex  RleCompressor_8cpp_8o_8d.tex  RleCompressor_8hpp.tex  RleCompressor_8hpp_source.tex  annotated.tex  classLz77Compressor.eps  classLz77Compressor.tex  classcompression_1_1BitIO.tex  classcompression_1_1BitIO_1_1BitReader.tex  (+49 more)
include/compression/: ArithmeticCoder.hpp  ArithmeticCompressor.hpp  BitIO.hpp  BwtCompressor.hpp  ByteTypeAdapter.hpp  Crc32.hpp  DeflateCompressor.hpp  FileFormat.hpp  HuffmanCoder.hpp  HuffmanCompressor.hpp  ICompressor.hpp  Lz77Compressor.hpp  NullCompressor.hpp  RleCompressor.hpp  dummy.hpp
release-docs/: MARKETING_BLURB.md  PR_TEMPLATE.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_ARITHMETIC.md
src/: ArithmeticCoder.cpp  ArithmeticCompressor.cpp  BwtCompressor.cpp  CMakeLists.txt  CompressionLibConfig.cmake  DeflateCompressor.cpp  HuffmanCoder.cpp  HuffmanCompressor.cpp  Lz77Compressor.cpp  Makefile  NodeComparator.hpp  NullCompressor.cpp  RleCompressor.cpp
src/cmake/: CompressionLibConfig.cmake.in
tests/: ArithmeticCompressorTest.cpp  CMakeLists.txt  DeflateCompressorTest.cpp  Lz77CompressorTest.cpp  Makefile  compression_tests  compression_tests[1]_include.cmake  compression_tests[1]_tests.cmake  main.cpp
